policy_update/k8s_deployment/opa-service-draft.yml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: default
spec:
  selector:
    app: opa
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
  type: ClusterIP
